The HTTPS GET Request

--- a/Movies/Pages/Index.cshtml
+++ b/Movies/Pages/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <form>
-    <input type="text" name="SearchTerms"/>
+    <input type="text" name="SearchTerms" value="@Model.SearchTerms"/>
     <input type="submit" value="Search"/>
 </form>
 <h1>Movie Results</h1>
