--- a/Movies/Pages/Index.cshtml
+++ b/Movies/Pages/Index.cshtml
@@ -5,6 +5,13 @@
 }
 
 <form>
+    @foreach (String rating in MovieDatabase.MPAARatings)
+    {
+        <label>
+            <input type="checkbox" name="MPAARatings" value="@rating" checked="@Model.MPAARatings.Contains(rating)"/> @rating
+        </label>
+    }
+
     <input type="text" name="SearchTerms" value="@Model.SearchTerms"/>
     <input type="submit" value="Search"/>
 </form>
