Applying MPAA Rating Filters pt 2

--- a/Movies/Pages/Index.cshtml
+++ b/Movies/Pages/Index.cshtml
@@ -11,10 +11,11 @@
                 <input type="checkbox" name="MPAARatings" value="@rating" checked="@Model.MPAARatings.Contains(rating)" /> @rating
             </label>
         }
+
         @foreach (String genre in MovieDatabase.Genres)
         {
             <label>
-                <input type="checkbox" name="Genres" value="@genre"/> @genre
+                <input type="checkbox" name="Genres" value="@genre" checked="@Model.Genres.Contains(genre)"/> @genre
             </label>
         }
 
