--- a/Movies/Pages/Index.cshtml
+++ b/Movies/Pages/Index.cshtml
@@ -35,6 +35,14 @@
             and
             <input name="IMDBMax" type="number" min="0" max="10" step="0.1" placeholder="min" />
         </div>
+
+        <h4>Rotten Tomatoes Rating</h4>
+        <div>
+            Between
+            <input name="RottenTomatoesMin" type="number" min="0" max="100" step="1" placeholder="min" />
+            and
+            <input name="RottenTomatoesMax" type="number" min="0" max="100" step="1" placeholder="min" />
+        </div>
     </div>
 
     <div id="results">
