--- a/Movies/Pages/Index.cshtml
+++ b/Movies/Pages/Index.cshtml
@@ -31,17 +31,17 @@
         <h4>IMDB Rating</h4>
         <div>
             Between
-            <input name="IMDBMin" type="number" min="0" max="10" step="0.1" placeholder="min" />
+            <input name="IMDBMin" type="number" min="0" max="10" step="0.1" placeholder="min" value="@Model.IMDBMin"/>
             and
-            <input name="IMDBMax" type="number" min="0" max="10" step="0.1" placeholder="min" />
+            <input name="IMDBMax" type="number" min="0" max="10" step="0.1" placeholder="max" value="@Model.IMDBMax"/>
         </div>
 
         <h4>Rotten Tomatoes Rating</h4>
         <div>
             Between
-            <input name="RottenTomatoesMin" type="number" min="0" max="100" step="1" placeholder="min" />
+            <input name="RottenTomatoesMin" type="number" min="0" max="100" step="1" placeholder="min" value="@Model.RottenTomatoesMin"/>
             and
-            <input name="RottenTomatoesMax" type="number" min="0" max="100" step="1" placeholder="min" />
+            <input name="RottenTomatoesMax" type="number" min="0" max="100" step="1" placeholder="max" value="@Model.RottenTomatoesMax"/>
         </div>
     </div>
 
